# CXXShockTube

./: .gitignore  CMakeLists.txt  README.md  STORY.md  bench.cpp  generate_plots.py  main.cpp  performance_metrics.txt  plot.py  plot_comparison.py  plot_core.py  plot_dynamics.py  plot_numerical.py  plot_phase.py  plot_wave.py  validate.py
.hermes/plans/: 2026-04-19_142206-analyse-the-current-parallelisation-scheme-ident.md
include/: analytical.h  constants.h  numerical.h  physics.h  problems.h  solver.h
matplotlib-plot-pitfalls/: SKILL.md
src/: analytical.cpp  numerical.cpp  physics.cpp  problems.cpp  solver.cpp
